[package]
name = "spin-blobstore-azure"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
# azure_data_cosmos = { git = "https://github.com/azure/azure-sdk-for-rust.git", rev = "8c4caa251c3903d5eae848b41bb1d02a4d65231c" }
# azure_identity = { git = "https://github.com/azure/azure-sdk-for-rust.git", rev = "8c4caa251c3903d5eae848b41bb1d02a4d65231c" }
azure_core = "0.20.0"
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
futures = { workspace = true }
serde = { workspace = true }
spin-core = { path = "../core" }
spin-factor-blobstore = { path = "../factor-blobstore" }
tokio = { workspace = true }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
uuid = { version = "1.0", features = ["v4"] }
wasmtime-wasi = { workspace = true }

[lints]
workspace = true
