[package]
name = "spin-http"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
http = "0.2"
hyper = { workspace = true }
http-body-util = { workspace = true }
wasmtime-wasi-http = { workspace = true, optional = true}
indexmap = "1"
percent-encoding = "2"
serde = { version = "1.0", features = ["derive"] }
tracing = { workspace = true }
spin-app = { path = "../app", default-features = false }

[dev-dependencies]
spin-testing = { path = "../testing" }
toml = "0.8.2"

[features]
default = ["runtime"]
runtime = ["spin-app/runtime", "dep:wasmtime-wasi-http"]
