[package]
name = "spin-key-value-spin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
rusqlite = { workspace = true, features = ["blob", "bundled", "array"] }
serde = { workspace = true }
spin-core = { path = "../core" }
spin-factor-key-value = { path = "../factor-key-value" }
spin-world = { path = "../world" }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
