[package]
name = "outbound-http"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow  = "1.0"
http = "0.2"
reqwest = { version = "0.11", features = ["gzip"], optional = true  }
spin-app = { path = "../app", default-features = false }
spin-core = { path = "../core", optional = true  }
spin-world = { path = "../world", optional = true  }
terminal = { path = "../terminal" }
tracing = { workspace = true }
url = "2.2.1"

[features]
default = ["runtime"]
runtime = ["dep:reqwest", "dep:spin-core", "spin-app/runtime", "dep:spin-world"]
